feat: add a bash cli